--- a/ClcProject/index.html
+++ b/ClcProject/index.html
@@ -21,7 +21,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <h1 class="top" style="font-family:'Times New Roman', Times, serif; font-weight:bold;">Just a Simple Calculator </h1>
-            <a href="https://www.instagram.com/its__you__and__only__you?igsh=emR6ZzAyenoyaGN2"><h3 class="top-sub">By Talentless human</h3></a>
+            <a href="https://www.instagram.com/bikram.tathastu?igsh=emR6ZzAyenoyaGN2"><h3 class="top-sub">By Talentless human</h3></a>
 
         <section id="play-area">
             <div id="calculator-container">
@@ -55,7 +55,7 @@
                 <a href="https://github.com/TalentlessHuman" target="_blank">
                   <img src="https://cdn.jsdelivr.net/npm/simple-icons/icons/github.svg" alt="GitHub">
                 </a>
-                <a href="https://www.instagram.com/its__you__and__only__you?igsh=emR6ZzAyenoyaGN2" target="_blank">
+                <a href="https://www.instagram.com/bikram.tathastu?igsh=emR6ZzAyenoyaGN2" target="_blank">
                   <img src="https://cdn.jsdelivr.net/npm/simple-icons/icons/instagram.svg" alt="Instagram">
                 </a>
                 <a href="https://www.facebook.com/TalentlessB" target="_blank">
